--- a/app/src/main/res/layout/summary.xml
+++ b/app/src/main/res/layout/summary.xml
@@ -10,8 +10,9 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <TextView
@@ -45,19 +46,19 @@
         app:drawableStartCompat="@drawable/ic_linear_scale_white_24dp" />
 
     <LinearLayout
-        android:orientation="horizontal"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
-        android:paddingTop="40dp"
-        style="?android:attr/buttonBarStyle" >
+        android:orientation="horizontal"
+        android:paddingTop="40dp">
 
         <Button
             android:id="@+id/summary_button_ok"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/ok"
-            style="?android:attr/buttonBarButtonStyle"/>
+            android:text="@string/ok" />
     </LinearLayout>
 
 </LinearLayout>
