--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -9,11 +9,13 @@
   -->
 
 <network-security-config xmlns:tools="http://schemas.android.com/tools">
-    <base-config cleartextTrafficPermitted="true"
+    <base-config
+        cleartextTrafficPermitted="true"
         tools:ignore="InsecureBaseConfiguration">
         <trust-anchors>
             <certificates src="system" />
-            <certificates src="user"
+            <certificates
+                src="user"
                 tools:ignore="AcceptsUserCertificates" />
         </trust-anchors>
     </base-config>
