--- a/app/src/main/res/layout/newtrack_dialog.xml
+++ b/app/src/main/res/layout/newtrack_dialog.xml
@@ -10,48 +10,48 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="20dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/label_newtrack_name"
         android:contentDescription="@string/label_newtrack_name"
-        android:labelFor="@id/newtrack_edittext" />
+        android:labelFor="@id/newtrack_edittext"
+        android:text="@string/label_newtrack_name" />
 
     <EditText
         android:id="@+id/newtrack_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textShortMessage"
-        android:text="@string/label_name"
         android:ems="10"
         android:importantForAutofill="no"
+        android:inputType="textShortMessage"
+        android:text="@string/label_name"
         tools:targetApi="o" />
 
     <LinearLayout
-        android:orientation="horizontal"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="end"
-        style="?android:attr/buttonBarStyle" >
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/newtrack_button_cancel"
-            android:text="@string/cancel"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:text="@string/cancel" />
 
         <Button
             android:id="@+id/newtrack_button_submit"
-            android:text="@string/submit"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="?android:attr/buttonBarButtonStyle" />
+            android:text="@string/submit" />
 
     </LinearLayout>
 </LinearLayout>
